Refresh on real time rendering missing when a texture coordinate node is used in conjunction with empties #47931

Closed
opened 2016-03-25 15:32:23 +01:00 by Thomas Beck · 5 comments
Member

Blender: Newest master
i7, Gtx560*2, Linux64

Description:
When I insert a Texture Coordinates node and use "Object Mapping" with an Empty no refresh is happening on a simultaneously happening real time rendering process.

Reproduction:
Use the file ObjectRefresh.blend and go into real time rendering mode (Shift)+(Z). Then use double (R) to rotate the already selected empty: the rendering will not update. When you restart the real time rendering, it will show the correctly updated result.
When I use another object (like a plane), it will restart the rendering process but the texture coords are not changed. I always have to (Shift)+(Z) again to see it.

Cheers, Thomas

Blender: Newest master i7, Gtx560*2, Linux64 Description: When I insert a Texture Coordinates node and use "Object Mapping" with an Empty no refresh is happening on a simultaneously happening real time rendering process. Reproduction: Use the file [ObjectRefresh.blend](https://archive.blender.org/developer/F298267/ObjectRefresh.blend) and go into real time rendering mode (Shift)+(Z). Then use double (R) to rotate the already selected empty: the rendering will not update. When you restart the real time rendering, it will show the correctly updated result. When I use another object (like a plane), it will restart the rendering process but the texture coords are not changed. I always have to (Shift)+(Z) again to see it. Cheers, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Thomas Beck 2016-03-25 15:32:23 +01:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

This issue was referenced by e2e72a20ec

This issue was referenced by e2e72a20ec979984114069f55363785f72428f28

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@c3edc5df33

This issue was referenced by blender/cycles@c3edc5df33382f869b147af407731b988ce61c8d
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47931
No description provided.