Fix T47931: Missed world shader update when having object dependency